[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "sameh-stirling"
version = "0.0.6"
authors = [
  { name="Sameh Salah", email="samehsalah83@gmail.com" },
]
description = "A library for creating Dash interactive charts"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samehsalah/sameh-stirling"